--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,10 @@
+:root {
+    --primary-color: darkblue;
+    --border: 1px solid rgb(0 0 0 / 0.3);
+}
+
 nav {
-    background-color: darkblue;
+    background-color: var(--primary-color);
     padding: 10px;
 }
 
@@ -10,13 +15,13 @@ nav a {
 }
 
 h1 {
-    color: darkblue;
+    color: var(--primary-color);
 }
 
 main img {
     width: 150px;
     height: auto;
-    border: 1px solid black;
+    border: var(--border);
     padding: 2px;
     box-shadow: 0 0 30px gray;
 }
@@ -32,7 +37,7 @@ main {
 aside {
     width: 20rem;
     margin: 1rem;
-    border: 1px solid rgb(0 0 0 / 0.3);
+    border: var(--border);
     padding: 1rem;
     background-color: whitesmoke;
     color: #333;
@@ -46,6 +51,6 @@ aside img {
 
 footer {
     margin-top: 2rem;
-    border-top: 1px solid rgb(0 0 0 / 0.3);
+    border-top: var(--border);
     text-align: center;
 }
