--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #7BA098;
-    --secondary-color: #474935;
-    --accent1-color: #98CBB4;
-    /* --accent2-color: #B5FED9; Still not used */
+    --primary-color: #474935;
+    /* --secondary-color: #7BA098;
+    --accent1-color: #98CBB4; Still not used
+    --accent2-color: #B5FED9; */
     --heading-font: "Segoe UI", Arial, sans-serif;
     --body-font: "Segoe UI", Tahoma, Arial, sans-serif;
 }
@@ -15,7 +15,7 @@
 
 body {
     font-family: var(--body-font);
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 header,
@@ -28,7 +28,7 @@ footer {
 h1,
 h2 {
     font-family: var(--heading-font);
-    color: var(--secondary-color);
+    color: var(--primary-color);
 }
 
 nav,
@@ -59,7 +59,7 @@ h1 {
     width: 100%;
     text-align: center;
     padding: 10px;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     opacity: 0.7;
     color: white;
 }
@@ -68,7 +68,7 @@ h1 {
     position: absolute;
     top: 90px;
     opacity: 0.7;
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
 }
 
