--- a/week04/styles/flexbox.css
+++ b/week04/styles/flexbox.css
@@ -7,7 +7,9 @@ body {
     border: 3px dashed darkcyan;
     background-color: lightyellow;
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .flex-item {
