--- a/week04/styles/layout-exercises-solution.css
+++ b/week04/styles/layout-exercises-solution.css
@@ -32,6 +32,7 @@ div {
     background-color: #abb;
     display: grid;
     place-items: center;
+
 }
 
 .container2 {
@@ -51,7 +52,8 @@ div {
 }
 
 .columns-3 {
-    grid-column: span 3;}
+    grid-column: span 3;
+}
 
 .three {
     margin: .25rem;
