week 03 activity correction 4

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -1,6 +1,6 @@
 :root {
     --primary-color: #474935;
-    --secondary-color: #7BA098;
+    --secondary-color: #25443d;
     --heading-font: "Segoe UI", Arial, sans-serif;
     --body-font: "Segoe UI", Tahoma, Arial, sans-serif;
 }
